objects/Affected_Product__c.object
<CustomObject>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Destroy</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Quarantine</fullName>
                </value>
                <value>
                    <fullName>Re-Mix</fullName>
                </value>
                <value>
                    <fullName>Re-Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10023</fullName>
                </value>
                <value>
                    <fullName>48997</fullName>
                </value>
                <value>
                    <fullName>54003</fullName>
                </value>
                <value>
                    <fullName>98007</fullName>
                </value>
                <value>
                    <fullName>45008</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacture_Date__c</fullName>
        <label>Manufacture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Affected_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Event</label>
        <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
        <relationshipName>Affected_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Affected Products</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Affected Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affected Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>